Mon Jan 25 12:04:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h:
          dpf is now a process wide singleton. This uncovers some issues with
          the sharing of the dp between connectors

Mon Jan 25 11:17:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.cpp
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
          Const, layout, and debug message changes

Mon Jan 25 10:01:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/MPC/config/dance_redirectionservice.mpb
        * DAnCE/RedirectionService/*
        * DAnCE/tests/ObjectLocatorTest/*
        * DAnCE/tests/RedirectionServiceTest/*
          Removed, redirectionservice isn't working in DAnCE and there are no
          plans to add support for it

Mon Jan 25 09:10:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender.mpc:
          Resolved compiler.

Mon Jan 25 09:01:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Connector/AMI_MyFoo_i.cpp:
        * connectors/ami4ccm/examples/Hello/Connector/AMI_MyFoo_i.h:
          Removed includes to files that have been removed

Mon Jan 25 08:49:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp:
          Always print usage messages

Sat Jan 23 19:08:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp
        * DAnCE/NodeManager/Node_Manager_Module.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp