@@ -87,7 +87,7 @@ DDS_StateListen_T<DDS_TYPE, CCM_TYPE>::activate (
         }
       this->rti_reader_.set_listener (
         this->data_listener_.in (),
-        0);
+        ::CIAO::DDS4CCM::RTI::DataReaderStateListener_T<DDS_TYPE, CCM_TYPE>::get_mask ());
     }
   catch (...)
     {
